# atriel-studio

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  environment.yaml  pyproject.toml
.github/workflows/: ci.yaml
configs/: create_mockup.yaml  generate_csv_files.yaml  generate_images.yaml  generate_pintereset_csv.yaml
src/: create_mockup.py  generate_csv_files.py  generate_images.py  generate_pintereset_csv.py  generators.py  image_generator.py  image_uploader.py  ssh_file_transfer.py  text_generators.py  title_generator.py  utils.py
src/app/: functions.py  utils.py
src/image_data/: image_generator.py  image_matcher.py
src/text_data/: description_generator.py  publish_date_generator.py  sample_processor.py  ssh_file_transfer.py  title_generator.py
src/text_generators/: description_generator.py  sample_processor.py  title_generator.py
